Bug 308091 - Bad Plural in "Are you sure" Dialog
Summary: Bad Plural in "Are you sure" Dialog
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: GIT
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-08 20:44 UTC by Allen Winter
Modified: 2012-10-09 08:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.3
Sentry Crash Report:


Attachments
shows the dialog with the improperly pluraized message (89.87 KB, image/png)
2012-10-08 20:45 UTC, Allen Winter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Allen Winter 2012-10-08 20:44:34 UTC
When I attempt to delete a contact in kaddressbook I get a message in the "are you sure" dialog that is improperly pluralized.

See attached screenshot

Reproducible: Always

Steps to Reproduce:
1. select Delete Contact from context menu
2.
3.
Actual Results:  
see the dialog with the improper pluralization

Expected Results:  
proper pluralization
Comment 1 Allen Winter 2012-10-08 20:45:22 UTC
Created attachment 74428 [details]
shows the dialog with the improperly pluraized message
Comment 2 Laurent Montel 2012-10-09 08:02:54 UTC
you want to delete my contact ?!!!! :)

Wierds it works fine here...
don't understand.
Comment 3 Laurent Montel 2012-10-09 08:25:26 UTC
Git commit 365cb3620687e787961e1bbd923425d390863f86 by Montel Laurent.
Committed on 09/10/2012 at 10:25.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 308091 - Bad Plural in "Are you sure" Dialog

FIXED-IN: 4.9.3

M  +19   -9    akonadi/standardactionmanager.cpp

http://commits.kde.org/kdepimlibs/365cb3620687e787961e1bbd923425d390863f86