Fix Bug 308091 - Bad Plural in "Are you sure" Dialog

FIXED-IN: 4.9.3
BUG: 308091